gcc/testsuite/rust.test/xfail_compile/never_type_err2.rs
// FIXME: Unimplemented features
fn foo() -> ! { // { dg-error "unresolved type" }
    let a: !; // { dg-error "unresolved type" }
}
